
# The directory where the data files will be installed
cmakemodulesdir = $(datadir)/minigui/cmake/Modules

cmakemodules_DATA =  \
					 common.cmake \
					 FindFREETYPE.cmake \
					 FindJPEG.cmake \
					 FindMiniGUI.cmake \
					 FindPNG.cmake \
					 FindPTHREAD.cmake \
					 FindZLIB.cmake

EXTRA_DIST=${cmakemodules_DATA}
