man_MANS = minigui.3 miniguiFunctions.3 miniguiAccelerator.3 miniguiAsyncKey.3 miniguiBitmap.3 \
    miniguiCaretHandler.3 miniguiClipRectHeap.3 miniguiCreateWindow.3 \
    miniguiCursor.3 miniguiDC.3 miniguiDCAttr.3 miniguiDCClipping.3 \
    miniguiDTI.3 miniguiDialogBox.3 miniguiDrawing.3 miniguiEtcFile.3 \
    miniguiFixStr.3 miniguiHook.3 miniguiIME.3 miniguiIcon.3 miniguiInit.3 \
    miniguiLogFont.3 miniguiMain.3 miniguiMainWindow.3 miniguiMapTransf.3 \
    miniguiMapping.3 miniguiMenu.3 miniguiMessage.3 miniguiMisc.3 \
    miniguiPenBrush.3 miniguiRect.3 miniguiRegion.3 miniguiScreen.3 \
    miniguiString.3 miniguiSysChar.3 miniguiTextOutput.3 miniguiTextParse.3 \
    miniguiTimer.3 miniguiWindowClass.3 miniguiGetSysText.3 \
    miniguiMessages.3 miniguiStructures.3 miniguiControls.3 \
    miniguiLite.3

EXTRA_DIST = $(man_MANS) docmaker functions.txt
