libminiguiincludedir = $(includedir)/minigui/ctrl

libminiguiinclude_HEADERS= \
	ctrlhelper.h \
	static.h \
	button.h \
	edit.h \
	combobox.h \
	progressbar.h \
	menubutton.h \
	newtoolbar.h \
	propsheet.h \
	listbox.h \
	scrollview.h \
	trackbar.h \
	textedit.h \
	spinbox.h \
	monthcal.h \
	coolbar.h \
	listview.h \
	treeview.h \
	gridview.h \
	iconview.h \
	animation.h \
	scrollbar.h

EXTRA_DIST=makefile.ng makefile.msvc
