AM_CPPFLAGS = -I$(abs_top_srcdir)/src/include -I$(abs_top_srcdir)/include

noinst_LTLIBRARIES = libimage.la

libimage_la_SOURCES =   \
    cdjpeg.h gif.c imgapi.c imgapi.h jcomapi.c jdapimin.c          \
    jdapistd.c jdatasrc.c jdcoefct.c jdcolor.c jdct.h jddctmgr.c   \
    jdhuff.c jdhuff.h jdinput.c jdmainct.c jdmarker.c jdmaster.c   \
    jdmerge.c jdphuff.c jdpostct.c jdsample.c jdtrans.c jidct.c    \
    jmorecfg.h jpegint.h jpeglib.h jpg.c jutils.c

