noinst_HEADERS =        \
    accelkey.h bidi.h bitmap.h cliprect.h ctrlclass.h       \
    cursor.h dc.h event.h list.h element.h \
    ial.h inline.h internals.h zorder.h menu.h misc.h       \
    msgstr.h sysfont.h timer.h devfont.h fontname.h \
    readbmp.h icon.h blockheap.h \
    ourhdr.h client.h server.h sharedres.h sockio.h drawsemop.h \
    gal.h newgal.h memops.h incoreres.h sysres.h clipboard.h \
    md5.h glyph.h license.h mgsock.h
