EXTRA_DIST = \
    about_dlg.3 \
    accel_fns.3 \
    _ARC.3 \
    basic_types.3 \
    _BITMAP.3 \
    _BLOCKHEAP.3 \
    block_heap_fns.3 \
    bmp_fns.3 \
    bmp_load_fns.3 \
    bmp_struct.3 \
    bug.3 \
    caret_fns.3 \
    _CHILDINFO.3 \
    class_fns.3 \
    clipboard_fns.3 \
    clip_fns.3 \
    _CLIPRECT.3 \
    _CLIPRGN.3 \
    color_vars.3 \
    common.h.3 \
    _CONTAINERINFO.3 \
    control_fns.3 \
    control.h.3 \
    controls.3 \
    _COOLBARITEMINFO.3 \
    creation_msgs.3 \
    ctrl_button.3 \
    ctrl_button_msgs.3 \
    ctrl_button_ncs.3 \
    ctrl_button_states.3 \
    ctrl_button_styles.3 \
    ctrl_combobox.3 \
    ctrl_combobox_msgs.3 \
    ctrl_combobox_ncs.3 \
    ctrl_combobox_styles.3 \
    _CTRLDATA.3 \
    ctrl_edit.3 \
    ctrl_edit_msgs.3 \
    ctrl_edit_ncs.3 \
    ctrl_edit_styles.3 \
    ctrl_listbox.3 \
    ctrl_listbox_msgs.3 \
    ctrl_listbox_ncs.3 \
    ctrl_listbox_styles.3 \
    ctrl_menubutton.3 \
    ctrl_menubutton_msgs.3 \
    ctrl_menubutton_ncs.3 \
    ctrl_menubutton_styles.3 \
    ctrl_msgs.3 \
    ctrl_newtoolbar.3 \
    ctrl_newtoolbar_msgs.3 \
    ctrl_newtoolbar_styles.3 \
    ctrl_progbar.3 \
    ctrl_progbar_msgs.3 \
    ctrl_progbar_ncs.3 \
    ctrl_progbar_styles.3 \
    ctrl_propsheet.3 \
    ctrl_propsheet_msgs.3 \
    ctrl_propsheet_ncs.3 \
    ctrl_propsheet_styles.3 \
    ctrl_scrollview.3 \
    ctrl_scrollview_msgs.3 \
    ctrl_scrollview_ncs.3 \
    ctrl_scrollview_styles.3 \
    ctrl_static.3 \
    ctrl_static_msgs.3 \
    ctrl_static_ncs.3 \
    ctrl_static_styles.3 \
    ctrl_textedit.3 \
    ctrl_textedit_msgs.3 \
    ctrl_textedit_ncs.3 \
    ctrl_textedit_styles.3 \
    ctrl_toolbar.3 \
    ctrl_toolbar_msgs.3 \
    ctrl_trackbar.3 \
    ctrl_trackbar_msgs.3 \
    ctrl_trackbar_ncs.3 \
    ctrl_trackbar_styles.3 \
    cursor_fns.3 \
    dc_attrs.3 \
    dc_fns.3 \
    desktop_msgs.3 \
    dialog_fns.3 \
    _DLGTEMPLATE.3 \
    draw_adv_2d_fns.3 \
    draw_fns.3 \
    endian_info.3 \
    endian_rw_fns.3 \
    endianrw.h.3 \
    err_codes.3 \
    etc_fns.3 \
    _FILEDLGDATA.3 \
    filedlg.h.3 \
    fixed_math_fns.3 \
    fixedmath.h.3 \
    fixed_str.3 \
    fns.3 \
    font_fns.3 \
    _FONTMETRICS.3 \
    GAL_Color.3 \
    GAL_Overlay.3 \
    GAL_Palette.3 \
    GAL_Rect.3 \
    gamma_fns.3 \
    gdi_fns.3 \
    gdi.h.3 \
    gdi_types.3 \
    general_rw_fns.3 \
    global_fns.3 \
    global_vars.3 \
    _GLYPHBITMAP.3 \
    _GRIDCELL.3 \
    _GRIDCOLHEADER.3 \
    _GRIDNM_NORMAL.3 \
    _GRIDROWHEADER.3 \
    handles.3 \
    _HOOKINFO.3 \
    icon_fns.3 \
    ime_fns.3 \
    init_fns.3 \
    key_defs.3 \
    key_msgs.3 \
    key_status.3 \
    _LISTBOXITEMINFO.3 \
    lite_fns.3 \
    lite_layer_fns.3 \
    lite_listenfd_fns.3 \
    lite_request_fns.3 \
    lite_server_fns.3 \
    lite_socket_fns.3 \
    lite_vars.3 \
    _LOGFONT.3 \
    _LVCOLUMN.3 \
    _LVFINDINFO.3 \
    _LVITEM.3 \
    _LVNM_NORMAL.3 \
    _LVSORTDATA.3 \
    _LVSUBITEM.3 \
    macros_types.3 \
    _MAINWINCREATE.3 \
    map_fns.3 \
    _MCCOLORINFO.3 \
    _MENUBUTTONITEM.3 \
    menu_fns.3 \
    _MENUITEMINFO.3 \
    menu_msgs.3 \
    MG_Client.3 \
    mgext_control_grid_msgs.3 \
    mgext_controls.3 \
    mgext_ctrl_coolbar.3 \
    mgext_ctrl_coolbar_msgs.3 \
    mgext_ctrl_coolbar_styles.3 \
    mgext_ctrl_grid.3 \
    mgext_ctrl_grid_ncs.3 \
    mgext_ctrl_listview.3 \
    mgext_ctrl_listview_msgs.3 \
    mgext_ctrl_listview_ncs.3 \
    mgext_ctrl_listview_styles.3 \
    mgext_ctrl_monthcal.3 \
    mgext_ctrl_monthcal_msgs.3 \
    mgext_ctrl_monthcal_ncs.3 \
    mgext_ctrl_monthcal_styles.3 \
    mgext_ctrl_spinbox.3 \
    mgext_ctrl_spinbox_msgs.3 \
    mgext_ctrl_spinbox_ncs.3 \
    mgext_ctrl_spinbox_styles.3 \
    mgext_ctrl_treeview.3 \
    mgext_ctrl_treeview_msgs.3 \
    mgext_ctrl_treeview_ncs.3 \
    mgext_ctrl_treeview_styles.3 \
    mgext_fns.3 \
    mgext_gif_fns.3 \
    mgext.h.3 \
    mgext_skin_fns.3 \
    MG_Layer.3 \
    MG_RWops.3 \
    minigui.h.3 \
    misc_fns.3 \
    misc_macros.3 \
    mouse_msgs.3 \
    _MSG.3 \
    msgbox_fns.3 \
    msg_fns.3 \
    msg_hook_fns.3 \
    msg_pass_fns.3 \
    msgs.3 \
    _MYBITMAP.3 \
    _myWinButton.3 \
    mywindows.h.3 \
    _myWinEntry.3 \
    mywins_filedlg.3 \
    mywins_fns.3 \
    mywins_helpers.3 \
    _NTBINFO.3 \
    _NTBITEMINFO.3 \
    own_stdio.h.3 \
    paint_msgs.3 \
    pal_fns.3 \
    _POINT.3 \
    post_event_msgs.3 \
    _RECT.3 \
    rect_fns.3 \
    rect_vars.3 \
    region_fns.3 \
    _REQUEST.3 \
    _RGB.3 \
    scrollbar_fns.3 \
    _SCROLLINFO.3 \
    _SCROLLVIEWITEMINFO.3 \
    si_bmplabel_s.3 \
    sie_slider_s.3 \
    simple_types.3 \
    si_nrmlabel_s.3 \
    si_nrmslider_s.3 \
    si_rotslider_s.3 \
    _SIZE.3 \
    skin.h.3 \
    skin_head_s.3 \
    skin_item_s.3 \
    skin_set_s.3 \
    _SPININFO.3 \
    _STIPPLE.3 \
    str_helpers.3 \
    styles.3 \
    _svitem_operations.3 \
    sys_bmps.3 \
    system_font.3 \
    system_msgs.3 \
    _SYSTEMTIME.3 \
    sys_text.3 \
    text_output_fns.3 \
    text_parse_fns.3 \
    timer_fns.3 \
    _TOOLBARITEMINFO.3 \
    _TVITEMINFO.3 \
    user_msgs.3 \
    vcongui_fns.3 \
    vcongui.h.3 \
    version_info.3 \
    win32_types.3 \
    window_create_fns.3 \
    window_fns.3 \
    window_general_fns.3 \
    window.h.3 \
    window_msgs.3 \
    _WNDCLASS.3 \
    _WORDINFO.3 \
    yuv_fns.3
